# singapore-parliament-speeches-dbt

./: .gitignore  .pre-commit-config.yaml  README.md  SAMPLE_QUERIES.md  batch_summary.jsonl  catalog.json  dbt_project.yml  manifest.json  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements.txt  speech_cleanup.py  speech_cleanup.qmd  speech_summaries.py  speech_summaries_cost_evaluation.py
.github/workflows/: docs.yml
analyses/: Extract Data from Bigquery.R
docs/columns/: attendance.md  bill_day_diff_first_second_reading.md  bill_day_diff_second_third_reading.md  bill_day_diff_third_reading_passed.md  bill_first_reading_date.md  bill_number.md  bill_passed_date.md  bill_pdf_link.md  bill_second_reading_date.md  bill_third_reading_date.md  count_characters.md  count_questions_ministry.md  count_sentences.md  count_syllables.md  count_topic_speeches.md  count_words.md  date.md  datetime.md  effective_from_date.md  effective_to_date.md  gender.md  is_constitutional.md  is_latest_position.md  is_long_speech.md  is_present.md  is_primary_question.md  is_short_speech.md  is_supplementary_question.md  is_topic_constitutional.md  is_topic_procedural.md  is_vernacular_speech.md  member_appointments.md  member_birth_year.md  member_committees.md  member_constituency.md  member_count_concurrent_appointments.md  member_count_pri_questions.md  member_count_sittings_present.md  member_count_sittings_spoken.md  member_count_sittings_total.md  (+53 more)
docs/models/: agg_pri_questions_topics_by_member.md  (+24 more)
models/: properties.yml
seeds/: member.csv  topic_type.csv
(+66 files in other folders)
