[tool.sqlfmt]
dialect = "polyglot"

[tool.poetry]
name = "singapore-parliament-speeches-dbt"
version = "0.1.0"
description = ""
authors = ["jeremychia <jeremyjchia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = ">=1.7, <1.8"
dbt-bigquery = ">=1.7, <1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
